all test passing incl exercise_categories based on microposts, scaffolding generated tests for exercises untouched

--- a/app/views/exercise_categories/_exercise_category.html.erb
+++ b/app/views/exercise_categories/_exercise_category.html.erb
@@ -12,7 +12,7 @@
 	</div>
 	<div class="span1">
 		<%= link_to '<span class="btn btn-mini btn-primary center-icon">
-				<i class="icon-remove icon-white"></i>
+				<i class="icon-remove icon-white" id="Delete"></i>
 			</span>'.html_safe, exercise_category, method: :delete, data: { confirm: "You sure?" }, title: 'Delete' %>
 	</div>
 </div>
