--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,19 +3,31 @@
 	<div class = "row" >
 		<section>
 			<%= render 'shared/user_info' %>
+			<span>
+				<ul id="myTab" class="nav nav-tabs">
+				  <li class="active"><a href="#microposts" data-toggle="tab">Microposts</a></li>
+				  <li><a href="#workouts" data-toggle="tab">Workouts</a></li>
+				</ul>
+			</span>
 		</section>
-		<aside class = "span4">
-			<section>
-        <%= render 'shared/stats' %>
-      </section>
-			<section>
-				<%= render 'shared/micropost_form' %>
-			</section>
-		</aside>
-		<div class="span8">
-			<h3>Micropost Feed</h3>
-			<%= render 'shared/feed' %>
-		</div>
+		<div id="myTabContent" class="tab-content">
+	    <div class="tab-pane fade active in" id="microposts">	    
+				<%= render 'shared/micropost_mashup' %>
+			</div>
+	    <div class="tab-pane fade" id="workouts">
+	      <p> Awesome workouts display here </p>
+	      <script>
+			  $(function() {
+			    $( "#datepicker" ).datepicker({
+			      altField: "#alternate",
+			      altFormat: "DD, d MM, yy"
+			    });
+			  });
+			  </script>
+	      <p>Date: <input type="text" id="datepicker" />&nbsp;<input type="text" id="alternate" size="30" /></p>
+
+	    </div>
+	  </div>	
 	</div>
 <% else %>
 	<div class="center hero-unit">
