--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,27 +5,17 @@
 			<%= render 'shared/user_info' %>
 			<span>
 				<ul id="myTab" class="nav nav-tabs">
-				  <li class="active"><a href="#microposts" data-toggle="tab">Microposts</a></li>
-				  <li><a href="#workouts" data-toggle="tab">Workouts</a></li>
+				  <li><a href="#microposts" data-toggle="tab">Microposts</a></li>
+				  <li class="active"><a href="#workouts" data-toggle="tab">Workouts</a></li>
 				</ul>
 			</span>
 		</section>
 		<div id="myTabContent" class="tab-content">
-	    <div class="tab-pane fade active in" id="microposts">	    
-				<%= render 'shared/micropost_mashup' %>
+	    <div class="tab-pane fade" id="microposts">	    
+				<%= render 'shared/microposts_mashup' %>
 			</div>
-	    <div class="tab-pane fade" id="workouts">
-	      <p> Awesome workouts display here </p>
-	      <script>
-			  $(function() {
-			    $( "#datepicker" ).datepicker({
-			      altField: "#alternate",
-			      altFormat: "DD, d MM, yy"
-			    });
-			  });
-			  </script>
-	      <p>Date: <input type="text" id="datepicker" />&nbsp;<input type="text" id="alternate" size="30" /></p>
-
+	    <div class="tab-pane fade active in" id="workouts">
+	    	<%= render 'shared/workouts_mashup' %>
 	    </div>
 	  </div>	
 	</div>
