changed workouts mashup view to accordion, populated sample workouts

--- a/app/views/shared/_workouts_mashup.html.erb
+++ b/app/views/shared/_workouts_mashup.html.erb
@@ -3,3 +3,15 @@
   <%= text_field_tag(:myDatePicker, params[:myDatePicker]) %>
   
 <%= render 'shared/week' %>
+
+	<% @workouts.each do |workout| %>
+		<span class="content">
+			<%= workout.name %>
+			<%= workout.date %>
+			<% if current_user?(workout.user) %>
+				<%= link_to "delete", workout, method: :delete,
+													data: { confirm: "You sure?"},
+													title: workout.name %>
+			<% end %>
+		</span>
+	<% end %>
