--- a/app/views/shared/_week.html.erb
+++ b/app/views/shared/_week.html.erb
@@ -1,10 +1,3 @@
-<div class = "tabbable tabs-left">
-	<ul id="weekTabs" class = "nav nav-tabs">
-		<%= render partial: 'shared/week_day', 
-			collection: @week_days %>
-	</ul>
-	<div id="week_tabs_content" class="tab-content my_tabs_content">
-		<%= render 'shared/week_day_tab_content', 
-			week_days: @week_days %>
-	</div>
+<div class="accordion" id="accordion4">
+	<%= render 'shared/weekly_accordion', week_days: @week_days, workouts: @workouts %>
 </div>
